# home_work_19_2

./: .gitignore  pyproject.toml
catalog/: views.py
config/: settings.py
